fix color and further spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,8 @@ body {
 
 .top-row-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  align-items: center;
   flex-wrap: wrap;
 }
 
@@ -38,15 +39,12 @@ body {
 #addLockerForm {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   margin: 10px 10px 20px 10px;
   padding: 10px;
   box-shadow: 0 0 3px 0 rgb(90, 200, 250);
   overflow: scroll;
   gap: 10px;
   height: fit-content;
-  max-width: 600px;
-  /* width: 100%; */
 }
 
 #lockerContainer {
@@ -367,7 +365,8 @@ input[type="number"]::-webkit-outer-spin-button {
 .lockers-ready-container {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  margin: 5px 50px 0 50px;
+  gap: 5px;
 }
 
 .locker-number-items-container {
@@ -375,14 +374,15 @@ input[type="number"]::-webkit-outer-spin-button {
   flex-direction: column;
   align-content: center;
   flex-wrap: wrap;
-  height: 250px;
+  height: 230px;
+  flex-grow: 100;
   gap: 2px;
 }
 
 .readyMessage {
   border-radius: 3px;
   position: relative;
-  color: rgb(0, 122, 255);
+  color: rgb(90, 200, 250);
   font-size: 15px;
   background-color: transparent;
   box-shadow: 0px 0px 3px 0px rgb(90, 200, 250);
@@ -399,7 +399,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .trash {
   border: none;
-  border-left: 2px solid rgb(0, 122, 255);
+  border-left: 2px solid rgb(52, 199, 89);
   padding-left: 8px;
   color: rgb(255, 59, 48, 0.8);
   position: absolute;
